--- a/requirements.txt
+++ b/requirements.txt
@@ -61,9 +61,9 @@ jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 kubernetes==30.1.0
-langchain==0.2.16
+langchain>=0.2.38,<0.3.0
+langchain-core>=0.2.38,<0.3.0
 langchain-community==0.2.16
-langchain-core==0.3.1
 langchain-google-genai==2.0.0
 langchain-huggingface==0.0.3
 langchain-text-splitters==0.2.4
