--- a/requirements.txt
+++ b/requirements.txt
@@ -1,173 +1,173 @@
-accelerate==0.34.2
-aiohappyeyeballs==2.4.0
-aiohttp==3.10.5
-aiosignal==1.3.1
-altair==5.4.1
-annotated-types==0.7.0
-anyio==4.4.0
-asgiref==3.8.1
-attrs==24.2.0
-backoff==2.2.1
-bcrypt==4.2.0
-blinker==1.8.2
-build==1.2.2
-cachetools==5.5.0
-certifi==2024.8.30
-charset-normalizer==3.3.2
-chroma-hnswlib==0.7.6
-chromadb==0.5.5
-click==8.1.7
-coloredlogs==15.0.1
-dataclasses-json==0.6.7
-datasets==3.0.0
-Deprecated==1.2.14
-dill==0.3.8
-distro==1.9.0
-faiss-cpu==1.8.0.post1
-fastapi==0.114.1
-filelock==3.16.0
-Flask==3.0.3
-flatbuffers==24.3.25
-frozenlist==1.4.1
-fsspec==2024.6.1
-fuzzywuzzy==0.18.0
-gitdb==4.0.11
-GitPython==3.1.43
-google-ai-generativelanguage==0.6.6
-google-api-core==2.19.2
-google-api-python-client==2.146.0
-google-auth==2.34.0
-google-auth-httplib2==0.2.0
-google-generativeai==0.7.2
-googleapis-common-protos==1.65.0
-grpcio==1.66.1
-grpcio-status==1.62.3
-h11==0.14.0
-httpcore==1.0.5
-httplib2==0.22.0
-httptools==0.6.1
-httpx==0.27.2
-huggingface-hub==0.24.7
-humanfriendly==10.0
-idna==3.8
-importlib_metadata==8.4.0
-importlib_resources==6.4.5
-itsdangerous==2.2.0
-Jinja2==3.1.4
-jiter==0.5.0
-joblib==1.4.2
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-kubernetes==30.1.0
-langchain>=0.2.38,<0.3.0
-langchain-core>=0.2.38,<0.3.0
-langchain-community==0.2.16
-langchain-google-genai==2.0.0
-langchain-huggingface==0.0.3
-langchain-text-splitters==0.2.4
-langsmith==0.1.120
-Levenshtein==0.25.1
-lxml==5.3.0
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-marshmallow==3.22.0
-mdurl==0.1.2
-mmh3==4.1.0
-monotonic==1.6
-mpmath==1.3.0
-multidict==6.1.0
-multiprocess==0.70.16
-mypy-extensions==1.0.0
-narwhals==1.7.0
-networkx==3.3
-numpy==1.26.4
-oauthlib==3.2.2
-onnxruntime==1.19.2
-openai==0.28.0
-opentelemetry-api==1.27.0
-opentelemetry-exporter-otlp-proto-common==1.27.0
-opentelemetry-exporter-otlp-proto-grpc==1.27.0
-opentelemetry-instrumentation==0.48b0
-opentelemetry-instrumentation-asgi==0.48b0
-opentelemetry-instrumentation-fastapi==0.48b0
-opentelemetry-proto==1.27.0
-opentelemetry-sdk==1.27.0
-opentelemetry-semantic-conventions==0.48b0
-opentelemetry-util-http==0.48b0
-orjson==3.10.7
-overrides==7.7.0
-packaging==24.1
-pandas==2.2.2
-pillow==10.4.0
-posthog==3.6.5
-proto-plus==1.24.0
-protobuf==4.25.4
-psutil==6.0.0
-pyarrow==17.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pydantic==2.9.1
-pydantic_core==2.23.3
-pydeck==0.9.1
-Pygments==2.18.0
-PyMuPDF==1.24.10
-PyMuPDFb==1.24.10
-pyparsing==3.1.4
-pypdf==4.3.1
-PyPDF2==3.0.1
-PyPika==0.48.9
-pyproject_hooks==1.1.0
-python-dateutil==2.9.0.post0
-python-docx==1.1.2
-python-dotenv==1.0.1
-python-Levenshtein==0.25.1
-pytz==2024.2
-PyYAML==6.0.2
-rapidfuzz==3.9.7
-referencing==0.35.1
-regex==2024.9.11
-requests==2.32.3
-requests-oauthlib==2.0.0
-rich==13.8.1
-rpds-py==0.20.0
-rsa==4.9
-safetensors==0.4.5
-scikit-learn==1.5.2
-scipy==1.14.1
-sentence-transformers==3.1.0
-sentencepiece==0.2.0
-setuptools==74.1.2
-shellingham==1.5.4
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.1
-SQLAlchemy==2.0.34
-starlette==0.38.5
-streamlit==1.38.0
-sympy==1.13.2
-tenacity==8.5.0
-threadpoolctl==3.5.0
-tokenizers==0.19.1
-toml==0.10.2
-torch==2.4.1
-tornado==6.4.1
-tqdm==4.66.5
-transformers==4.44.2
-typer==0.12.5
-typing-inspect==0.9.0
-typing_extensions==4.12.2
-tzdata==2024.1
-uritemplate==4.1.1
-urllib3==2.2.3
-uvicorn==0.30.6
-uvloop==0.20.0
-watchfiles==0.24.0
-websocket-client==1.8.0
-websockets==13.0.1
-Werkzeug==3.0.4
-wrapt==1.16.0
-xxhash==3.5.0
-yarl==1.11.1
-zipp==3.20.1
+accelerate
+aiohappyeyeballs
+aiohttp
+aiosignal
+altair
+annotated-types
+anyio
+asgiref
+attrs
+backoff
+bcrypt
+blinker
+build
+cachetools
+certifi
+charset-normalizer
+chroma-hnswlib
+chromadb
+click
+coloredlogs
+dataclasses-json
+datasets
+Deprecated
+dill
+distro
+faiss-cpu
+fastapi
+filelock
+Flask
+flatbuffers
+frozenlist
+fsspec
+fuzzywuzzy
+gitdb
+GitPython
+google-ai-generativelanguage
+google-api-core
+google-api-python-client
+google-auth
+google-auth-httplib2
+google-generativeai
+googleapis-common-protos
+grpcio
+grpcio-status
+h11
+httpcore
+httplib2
+httptools
+httpx
+huggingface-hub
+humanfriendly
+idna
+importlib_metadata
+importlib_resources
+itsdangerous
+Jinja2
+jiter
+joblib
+jsonpatch
+jsonpointer
+jsonschema
+jsonschema-specifications
+kubernetes
+langchain
+langchain-core
+langchain-community
+langchain-google-genai
+langchain-huggingface
+langchain-text-splitters
+langsmith
+Levenshtein
+lxml
+markdown-it-py
+MarkupSafe
+marshmallow
+mdurl
+mmh3
+monotonic
+mpmath
+multidict
+multiprocess
+mypy-extensions
+narwhals
+networkx
+numpy
+oauthlib
+onnxruntime
+openai
+opentelemetry-api
+opentelemetry-exporter-otlp-proto-common
+opentelemetry-exporter-otlp-proto-grpc
+opentelemetry-instrumentation
+opentelemetry-instrumentation-asgi
+opentelemetry-instrumentation-fastapi
+opentelemetry-proto
+opentelemetry-sdk
+opentelemetry-semantic-conventions
+opentelemetry-util-http
+orjson
+overrides
+packaging
+pandas
+pillow
+posthog
+proto-plus
+protobuf
+psutil
+pyarrow
+pyasn1
+pyasn1_modules
+pydantic
+pydantic_core
+pydeck
+Pygments
+PyMuPDF
+PyMuPDFb
+pyparsing
+pypdf
+PyPDF2
+PyPika
+pyproject_hooks
+python-dateutil
+python-docx
+python-dotenv
+python-Levenshtein
+pytz
+PyYAML
+rapidfuzz
+referencing
+regex
+requests
+requests-oauthlib
+rich
+rpds-py
+rsa
+safetensors
+scikit-learn
+scipy
+sentence-transformers
+sentencepiece
+setuptools
+shellingham
+six
+smmap
+sniffio
+SQLAlchemy
+starlette
+streamlit
+sympy
+tenacity
+threadpoolctl
+tokenizers
+toml
+torch
+tornado
+tqdm
+transformers
+typer
+typing-inspect
+typing_extensions
+tzdata
+uritemplate
+urllib3
+uvicorn
+uvloop
+watchfiles
+websocket-client
+websockets
+Werkzeug
+wrapt
+xxhash
+yarl
+zipp
